nacl.tf
resource "aws_network_acl" "public_nacl" {
  vpc_id = aws_vpc.some_custom_vpc.id

  egress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "10.0.0.0/16"
    from_port  = 1024
    to_port    = 65535
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  tags = {
    Name        = "OpenText Central NACL"
    Environment = var.environment
  }
}
